[package]
name = "jindex"
version = "0.7.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
license-file = "LICENSE"
description = "Enumerate the paths through a JSON document"
homepage = "https://github.com/ckampfe/jindex"
repository = "https://github.com/ckampfe/jindex"
documentation = "https://docs.rs/jindex/"
readme = "README.md"
keywords = ["json", "paths"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
anyhow = "1.0"
jemalloc = { package = "jemallocator", version = "0.3", optional = true }
lifeguard = "0.6"
serde_json = "1.0"
structopt = "0.3"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.20"

[features]
default = ["jemalloc"]

[profile.release]
codegen-units = 1
lto = true
