[package]
name = "jindex"
version = "0.8.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
license-file = "LICENSE"
description = "Enumerate the paths through a JSON document"
homepage = "https://github.com/ckampfe/jindex"
repository = "https://github.com/ckampfe/jindex"
documentation = "https://docs.rs/jindex/"
readme = "README.md"
keywords = ["json", "paths"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = "1"
itoa = "0.4"
jemalloc = { package = "jemallocator", version = "0.3", optional = true }
serde_json = "1.0"
structopt = "0.3"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.23"

[features]
default = ["jemalloc"]

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
codegen-units = 1
lto = true