[package]
name = "jindex"
version = "0.10.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
license = "BSD-3-Clause"
description = "Enumerate the paths through a JSON document"
homepage = "https://github.com/ckampfe/jindex"
repository = "https://github.com/ckampfe/jindex"
documentation = "https://docs.rs/jindex/"
readme = "README.md"
keywords = ["json", "paths"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
itoa = "1"
jemalloc = { package = "tikv-jemallocator", version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-ident = "1"

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.26", default-features = false, features = ["signal"] }

[features]
default = ["jemalloc"]

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
codegen-units = 1
lto = true